--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,6 @@
-body {
-  margin-bottom: 100px !important;
+html,body{
+  height: 100%
 }
-
 img {
   width: 100%;
 }
@@ -41,10 +40,10 @@ img {
 .form-control::placeholder {
   color: #bbb !important;
 }
-
-footer {
-  position: fixed;
-  bottom: 0;
+.footer {
   left: 0;
+  bottom: 0;
   width: 100%;
+  color: white;
+  text-align: center;
 }
